works with feedbalc, repairs all divs and wrappers, links and forms, bleeding

--- a/final-project/css/main.css
+++ b/final-project/css/main.css
@@ -1,17 +1,13 @@
-/* .main_wrapper{
-    width: 1300px;
-    margin: auto;
-}
-.main_wrapper2{
-    width: 1300px;
-    margin: auto;
-}
-nav{
+/* 
+.nav_wrapper{
     background-color: rgb(89, 81, 81);
+}
+.nav_content{
+    width: 500px;
+    margin: auto;
 }
 .logo, .navigation, .search{
     background-color: aqua;
-    width: 1100px;
     margin: auto;
 }
 .about_us{
